# MorphoShell-OMP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE_STUB  README.md  requirements.txt
configs/: adhesive_slide.cfg  cone_bottom.cfg  cone_top.cfg  core_30MPa.cfg  core_ammar.cfg  cylinder.cfg  dan_morphoshell_comparison.cfg  gravity_side.cfg  magnetic_field.cfg  magnetic_field_opposite.cfg  settings_gravity.cfg
source/: CustomOutStreamClass.cpp  CustomOutStreamClass.hpp  Edge.cpp  Edge.hpp  EquilibriumCheck.cpp  EquilibriumCheck.hpp  InitialisationFunctions.cpp  InitialisationFunctions.h  Node.cpp  Node.hpp  Settings.cpp  Settings.hpp  SettingsStruct.cpp  SettingsStruct.hpp  SimulationStatus.hpp  StatusEnum.hpp  Triangle.cpp  Triangle.hpp  advanceDynamics.cpp  advanceDynamics.hpp  equilCheck.cpp  equilCheck.hpp  exportVtk.cpp  exportVtk.hpp  initialDirAndFileHandling.cpp  initialDirAndFileHandling.hpp  main.cpp  readSettingsFile.cpp  readSettingsFile.hpp  readVTKData.cpp  readVTKData.hpp  readVtk.cpp  readVtk.hpp  setRemainingInitCond_and_NodeMasses.cpp  setRemainingInitCond_and_NodeMasses.hpp  settings.cpp  settings.h  settings_michal.cfg  settings_new.cpp  settings_new.h  (+4 more)
source/calculations/: calcCurvatures.cpp  calcCurvatures.hpp  calcDeformationForces.cpp  calcDeformationForces.hpp  calcEnergiesAndStresses.cpp  calcEnergiesAndStresses.hpp  calcNodeNeighbours.cpp  calcNodeNeighbours.hpp  calcNonDeformationForces_and_ImposeBCS.cpp  calcNonDeformationForces_and_ImposeBCS.hpp  calcSecFFsAndRelatedQuantities.cpp  calcSecFFsAndRelatedQuantities.hpp  calcTriangleAdjacencies_And_Edges.cpp  calcTriangleAdjacencies_And_Edges.hpp  calcTriangleGeometries_and_DialledProgTensors.cpp  calcTriangleGeometries_and_DialledProgTensors.hpp  calcTrianglesIncidentOnNodes.cpp  calcTrianglesIncidentOnNodes.hpp  calc_nonVertexPatchNodes_and_MatForPatchDerivs.cpp  calc_nonVertexPatchNodes_and_MatForPatchDerivs.hpp
source/configuration/: config_base.cpp  config_base.h  core_config.cpp  core_config.h  derived_configuration.cpp  derived_configuration.h  gravity_config.cpp  gravity_config.h  slide_configuration.cpp  slide_configuration.h
source/functions/: extract_Just_Filename.cpp  extract_Just_Filename.hpp  getRealTime.cpp  getRealTime.hpp  kahanSum.cpp  kahanSum.hpp  perturbInitialPositionsWithRandomNoise.cpp  perturbInitialPositionsWithRandomNoise.hpp  zeroForces.cpp  zeroForces.hpp
source/physics/: cone.cpp  cone.h  magnetic_field.cpp  magnetic_field.h  rigid_body.cpp  rigid_body.h  slide.cpp  slide.h
